# mojo-strip

./: .gitignore  .gn  BUILD.gn  README.md
base/: BUILD.gn
components/tracing/: BUILD.gn
components/tracing/common/: trace_startup_config.cc  trace_startup_config.h
samples/: BUILD.gn
samples/app/: BUILD.gn  samples_main_runner_impl.cc  samples_main_runner_impl.h  samples_service_manager_main_delegate.cc
samples/app/android/: library_loader_hooks.cc  samples_main.cc
samples/app/mojo/: mojo_init.cc
samples/child/: BUILD.gn  child_thread_impl.cc  child_thread_impl.h  field_trial.cc  scoped_child_process_reference.cc  scoped_child_process_reference.h  thread_safe_sender.cc
samples/common/: BUILD.gn  associated_interfaces.mojom  child_control.mojom  child_process_host_impl.cc  child_process_host_impl.h  features.gni  in_process_child_thread_params.cc  samples_switches_internal.h  slave.mojom  slave_control.mojom  slaverer.mojom  slaverer_host.mojom  task_scheduler.cc  task_scheduler.h
samples/common/service_manager/: child_connection.cc  child_connection.h  service_manager_connection_impl.cc
samples/echo/: BUILD.gn  echo.mojom
samples/master/: BUILD.gn  bad_message.cc  bad_message.h  child_process_launcher_helper_posix.h  isolated_origin_util.cc  master_child_process_host_impl.cc  master_child_process_host_impl.h  master_context.cc  master_main.cc  master_main.h  master_main_loop.cc  master_main_loop.h  master_main_runner_impl.cc  master_main_runner_impl.h  master_process_sub_thread.h  master_thread_impl.h  notification_service_impl.h  posix_file_descriptor_info_impl.h  samples_service_delegate_impl.cc  startup_data_impl.cc  startup_task_runner.cc  startup_task_runner.h  utility_process_host.cc  utility_process_host.h
samples/master/android/: affiliate_process_host.h  affiliate_process_host_impl.cc  affiliate_process_host_impl.h  master_startup_controller.cc  master_startup_controller.h  samples_feature_list.cc  samples_startup_flags.cc  tracing_controller_android.cc  tracing_controller_android.h
samples/master/scheduler/: master_task_executor.h
samples/master/service_manager/: common_master_interfaces.cc  service_manager_context.cc  service_manager_context.h
samples/master/slaverer_host/: slaver_process_host_impl.h
samples/master/tracing/: BUILD.gn  background_startup_tracing_observer.cc  background_startup_tracing_observer.h  background_tracing_config_impl.cc  background_tracing_manager_impl.cc  file_tracing_provider_impl.cc  trace_message_filter.h  tracing_controller_impl_data_endpoint.cc
samples/public/android/: BUILD.gn
samples/public/app/: BUILD.gn  samples_main.h  samples_main_delegate.cc  samples_main_delegate.h
samples/public/child/: BUILD.gn
samples/public/common/: BUILD.gn  bind_interface_helpers.h  child_process_host_delegate.h  load_timing_info.mojom  main_function_params.h  process_type.h  resource_type.cc  result_codes.h  samples_client.cc  samples_client.h  samples_descriptors.h  samples_features.cc  samples_features.h  samples_paths.h  samples_switches.cc  samples_switches.h  sandbox_init.h  sandboxed_process_launcher_delegate.cc  service_manager_connection.h  service_names.mojom  simple_connection_filter.h  url_constants.h
samples/public/master/: BUILD.gn  background_tracing_config.h  child_process_data.cc  child_process_data.h  child_process_launcher_utils.h  child_process_termination_info.h  master_child_process_host.h  master_context.h  master_main_parts.h  master_message_filter.h  master_task_traits.cc  master_task_traits.h  master_thread.h  notification_details.h  notification_observer.h  notification_registrar.h  posix_file_descriptor_info.h  samples_master_client.cc  samples_master_client.h  site_isolation_policy.cc  slaver_process_host.h  slaver_process_host_observer.h  tracing_delegate.h
samples/public/slaverer/: BUILD.gn  samples_slaverer_client.h  seccomp_sandbox_status_android.h  slaver_thread.cc  slaver_thread_observer.h
samples/public/test/: BUILD.gn  test_service.cc  test_service.mojom
samples/public/utility/: BUILD.gn  samples_utility_client.h  utility_thread.h
samples/shell/: BUILD.gn
samples/shell/android/: BUILD.gn  shell_launcher.cc  shell_library_loader.cc  shell_manager.cc  shell_manager.h
samples/slaverer/: BUILD.gn  in_process_slaverer_thread.cc  in_process_slaverer_thread.h  slaver_process.cc  slaver_thread_impl.h  slaverer_main.cc  slaverer_main_platform_delegate_android.cc
samples/utility/: BUILD.gn  in_process_utility_thread.h  utility_service_factory.cc  utility_thread_impl.cc
samples_affiliate/common/: BUILD.gn  child.mojom  export.h  features.gni  field_trial_recorder.mojom  in_process_child_thread_params.h  samples_constants_internal.cc  samples_constants_internal.h  samples_paths.cc  samples_switches_internal.cc  slaver_message_filter.mojom
samples_affiliate/master/: BUILD.gn  child_process_launcher.cc  child_process_launcher.h  child_process_launcher_helper.cc  child_process_launcher_helper.h  child_process_launcher_helper_android.cc  child_process_launcher_helper_posix.cc  child_process_security_policy_impl.cc  child_process_security_policy_impl.h  isolated_origin_util.h  master_child_process_host_impl.cc  master_child_process_host_impl.h  master_context.cc  master_main_loop.cc  master_main_loop.h  master_main_runner_impl.cc  master_process_sub_thread.cc  master_shutdown_profile_dumper.cc  master_shutdown_profile_dumper.h  master_thread_impl.cc  notification_service_impl.cc  posix_file_descriptor_info_impl.cc  samples_service_delegate_impl.h  startup_data_impl.h  startup_helper.cc  startup_helper.h  utility_process_host.cc  utility_process_host.h  utility_process_host_client.h
samples_affiliate/utility/: BUILD.gn  in_process_utility_thread.cc  utility_main.cc  utility_service_factory.h  utility_thread_impl.h
services/data_decoder/: BUILD.gn  data_decoder_service.cc  data_decoder_service.h
services/samples/: BUILD.gn  manifest.json  service.cc  service.h  service_delegate.h
services/tracing/: BUILD.gn
ui/base/: BUILD.gn  layout.cc  layout.h
url/ipc/: BUILD.gn
(+249 files in other folders)
