# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/compiler/compiler.gni")

config("wrap_find_exidx") {
  ldflags = [ "-Wl,-wrap,dl_unwind_find_exidx" ]
}

component("tracing") {
  sources = [
    "child/child_trace_message_filter.cc",
    "child/child_trace_message_filter.h",
    "common/graphics_memory_dump_provider_android.cc",
    "common/graphics_memory_dump_provider_android.h",
    "common/tracing_messages.cc",
    "common/tracing_messages.h",
    "common/tracing_sampler_profiler.cc",
    "common/tracing_sampler_profiler.h",
    "tracing_export.h",
  ]

  defines = [ "TRACING_IMPLEMENTATION" ]

  deps = [
    "//base",
    "//ipc",
  ]

  if (is_android && can_unwind_with_cfi_table && is_official_build) {
    sources += [
      "common/native_stack_sampler_android.cc",
      "common/native_stack_sampler_android.h",
      "common/stack_unwinder_android.cc",
      "common/stack_unwinder_android.h",
    ]
    deps += [ "//buildtools/third_party/libunwind" ]
    include_dirs = [ "//buildtools/third_party/libunwind/trunk/include" ]

    # stack_unwinder_android.cc overrides the dl_unwind_find_exidx function.
    all_dependent_configs = [ ":wrap_find_exidx" ]
  }
}

component("startup_tracing") {
  sources = [
    "common/trace_startup.cc",
    "common/trace_startup.h",
    "common/trace_startup_config.cc",
    "common/trace_startup_config.h",
    "common/trace_to_console.cc",
    "common/trace_to_console.h",
    "common/tracing_switches.cc",
    "common/tracing_switches.h",
    "tracing_export.h",
  ]

  defines = [ "TRACING_IMPLEMENTATION" ]

  deps = [
    "//base",
  ]
}
