import("//build/buildflag_header.gni")
import("//build/config/features.gni")
import("//build/config/jumbo.gni")


jumbo_source_set("master") {
  visibility = [
    "//samples/app:*",
    "//samples/shell:samples_shell_lib",
    "//samples/public/master:master_sources",
  ]

  configs += [
    "//build/config:precompiled_headers",
  ]

  defines = []
  libs = []
  ldflags = []

  deps = [
    "//base",
    "//base:base_static",
    "//base/third_party/dynamic_annotations",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/platform",
    "//mojo/public/cpp/system",
    "//samples/common",
    "//samples/common:buildflags",
    "//samples/common:mojo_bindings",
    "//samples/public/common:common_sources",
    "//services/service_manager/embedder:embedder_result_codes",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//services/service_manager/runner/common",
    "//services/service_manager/runner/host:lib",
  ]

  if (is_android) {
    deps += [
      "//samples/public/android:samples_jni_headers",
    ]
  }

  public_deps = [
    "//ipc",
  ]

  sources = [
    "master_context.cc",
  ]
}
