# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/jumbo.gni")

jumbo_source_set("utility") {
  # Only the public target should depend on this. All other targets (even
  # internal samples ones other than test) should depend on the public one.
  visibility = [
    "//samples/app:*",
    "//samples/public/utility:utility_sources",
  ]

  sources = [
    "in_process_utility_thread.cc",
    "in_process_utility_thread.h",
    "utility_main.cc",
    "utility_service_factory.cc",
    "utility_service_factory.h",
    "utility_thread_impl.cc",
    "utility_thread_impl.h",
  ]

  configs += [ "//samples:samples_implementation" ]

  deps = [
    "//base",
    "//samples:export",
    "//samples/child",
    "//samples/public/child:child_sources",
    "//samples/public/common:common_sources",
    "//mojo/public/cpp/bindings",
    "//sandbox",
    "//services/data_decoder:lib",
    "//services/data_decoder/public/cpp",
    "//services/service_manager",
    "//services/service_manager/public/cpp",
    "//services/service_manager/public/mojom",
    "//url",
  ]
}
